Updated POM.XML name's field.

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>me.ianguuima imgur-sdk</name>
+    <name>imgur-sdk</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
